--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,7 +40,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -69,12 +69,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -128,7 +130,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem0=/Game/DungeonTESTLevel1
+MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints
@@ -156,29 +159,37 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
+LastLevel=/Game/DungeonTESTLevel1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player.Player
+OpenAssetsAtExit=/Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG
+OpenAssetsAtExit=/Game/InventorySystem/InventoryInst.InventoryInst
+OpenAssetsAtExit=/Game/InventorySystem/UI/InventoryWG.InventoryWG
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Blueprints/WorkingChest5
-MRUItem1=/Game/MedievalDungeon/Blueprints/WorkingChest4
-MRUItem2=/Game/MedievalDungeon/Blueprints/WorkingChest3
-MRUItem3=/Game/InventorySystem/Chest/ChestBP
-MRUItem4=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem5=/Game/MedievalDungeon/Blueprints/WorkingChest2
-MRUItem6=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem7=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem8=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem9=/Game/MedievalDungeon/Blueprints/Chest_5
-MRUItem10=/Game/MedievalDungeon/Blueprints/Chest_4
-MRUItem11=/Game/MedievalDungeon/Blueprints/Chest_3
-MRUItem12=/Game/MedievalDungeon/Blueprints/Chest_2
-MRUItem13=/Game/InventorySystem/Chest/WorkingChest
-MRUItem14=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem15=/Game/InventorySystem/Chest/TestChest2
+MRUItem0=/Game/InventorySystem/UI/InventoryWG
+MRUItem1=/Game/InventorySystem/InteractInterface
+MRUItem2=/Game/InventorySystem/InventoryInst
+MRUItem3=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem4=/Game/Player
+MRUItem5=/Game/DungeonTESTLevel1
+MRUItem6=/Game/MedievalDungeon/Blueprints/WorkingChest5
+MRUItem7=/Game/MedievalDungeon/Blueprints/WorkingChest4
+MRUItem8=/Game/MedievalDungeon/Blueprints/WorkingChest3
+MRUItem9=/Game/InventorySystem/Chest/ChestBP
+MRUItem10=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem11=/Game/MedievalDungeon/Blueprints/WorkingChest2
+MRUItem12=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem13=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem14=/Game/MedievalDungeon/Blueprints/Chest_5
+MRUItem15=/Game/MedievalDungeon/Blueprints/Chest_4
+MRUItem16=/Game/MedievalDungeon/Blueprints/Chest_3
+MRUItem17=/Game/MedievalDungeon/Blueprints/Chest_2
+MRUItem18=/Game/InventorySystem/Chest/WorkingChest
+MRUItem19=/Game/InventorySystem/Chest/WorkingChest2
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -387,6 +398,111 @@ StaminaPotion_C.Actor=True
 ManaPotion_C.Tick=True
 ManaPotion_C.Default=True
 K2Node_CustomEvent.GraphNodeDetail=True
+Player_C.Tick=True
+Player_C.Default=True
+Player_C.Components=True
+Player_C.Ability 1=True
+Player_C.Health=True
+Player_C.Ability 2=True
+Player_C.Ability 2Upgrade Tree=True
+Player_C.Ability UI=True
+Player_C.Ability 3=True
+Player_C.Ability 1Upgrade Tree=True
+Player_C.Ability 4=True
+Player_C.Tutorial=True
+Player_C.Death=True
+Player_C.Ability1=True
+Player_C.Ability 1UpgradeTree=True
+Player_C.Ability3UpgradeTree=True
+Player_C.Ability4=True
+Player_C.Ability4UpgradeTree=True
+Player_C.Character=True
+Player_C.Camera=True
+Player_C.Pawn=True
+Player_C.Replication=True
+Player_C.Rendering=True
+Player_C.Collision=True
+Player_C.Actor=True
+Player_C.Input=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+InventoryInst_C.Default=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+Player_C.TransformCommon=True
+Player_C.Animation=True
+Player_C.Mesh=True
+Player_C.Physics=True
+Player_C.Clothing=True
+Player_C.MasterPoseComponent=True
+Player_C.Lighting=True
+Player_C.ClothingSimulation=True
+Player_C.SkinWeights=True
+Player_C.Navigation=True
+Player_C.VirtualTexture=True
+Player_C.Tags=True
+Player_C.Activation=True
+Player_C.Cooking=True
+Player_C.Character Movement (General Settings)=True
+Player_C.Character Movement: Walking=True
+Player_C.Character Movement: Jumping / Falling=True
+Player_C.Character Movement (Networking)=True
+Player_C.Character Movement: Swimming=True
+Player_C.Character Movement: Flying=True
+Player_C.Character Movement: Custom Movement=True
+Player_C.Character Movement (Rotation Settings)=True
+Player_C.Character Movement: Physics Interaction=True
+Player_C.Character Movement=True
+Player_C.Character Movement: Avoidance=True
+Player_C.RootMotion=True
+Player_C.Character Movement: NavMesh Movement=True
+Player_C.NavMovement=True
+Player_C.Velocity=True
+Player_C.PlanarMovement=True
+Player_C.MovementComponent=True
+Player_C.Shape=True
+Player_C.Materials=True
+InventoryComponent_C.Default=True
+InventoryComponent_C.Tags=True
+InventoryComponent_C.Activation=True
+InventoryComponent_C.Cooking=True
+Item_herb_C.TransformCommon=True
+Item_herb_C.Rendering=True
+Item_herb_C.Replication=True
+Item_herb_C.Collision=True
+Item_herb_C.Input=True
+Item_herb_C.Actor=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+InventoryWG_C.Default=True
+InventoryWG_C.Appearance=True
+InventoryWG_C.Designer=True
+InventoryWG_C.Input=True
+InventoryWG_C.Interaction=True
+InventoryWG_C.Performance=True
+InventoryWG_C.Layout=True
+InventoryWG_C.Behavior=True
+InventoryWG_C.Render Transform=True
+InventoryWG_C.Accessibility=True
+InventoryWG_C.Clipping=True
+InventoryWG_C.Navigation=True
+InventoryWG_C.Localization=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/WorkingChest5.WorkingChest5;
@@ -417,6 +533,7 @@ RecentlyPlaced=/Game/MedievalDungeon/Blueprints/Chest_2.Chest_2;
 /Game/InventorySystem/Chest/WorkingChest1.WorkingChest1=1
 /Game/InventorySystem/UI/InventorySlotWG.InventorySlotWG=1
 /Game/InventorySystem/Consumables/ManaPotion.ManaPotion=1
+/Game/InventorySystem/InteractInterface.InteractInterface=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -458,6 +575,21 @@ NodeTemplateCacheCapMB=20.000000
 TestChest2_C=
 WorkingChest1_C=
 ManaPotion_C=
+InventoryInst_C="\"Object.InventoryData\" "
+GameInstance="\"Object.InventoryData\" "
+Object="\"Object.PlrLocation\" "
+InventorySlotWG_C="\"Object.PickedUpItemInfo\" "
+UserWidget="\"Object.InventorySlotArray\" "
+Widget="\"Object.InventorySlotArray\" "
+Visual="\"Object.InventorySlotArray\" "
+InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
+ActorComponent=
+Player_C="\"Object.Inventory\" "
+Character="\"Object.Inventory\" "
+Pawn="\"Object.Inventory\" "
+MySaveGame_C="\"Object.PlrLocation\" "
+SaveGame="\"Object.PlrLocation\" "
+InventoryWG_C="\"Object.InventorySlotArray\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -470,6 +602,7 @@ InstalledPlugins=XRVisualization
 
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=True
+PropertyWrapper.Variable=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1456,4 +1589,15 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[DetailCustomWidgetExpansion]
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
+InventoryInst_C=
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+InventorySlotWG_C=
+Player_C=
+MySaveGame_C=
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+InventoryWG_C=
+K2Node_CustomEvent=
 
